--- a/icesipalace-backend/pom.xml
+++ b/icesipalace-backend/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
-	<!-- <dependency>
+	<dependency>
     	<groupId>org.springframework.boot</groupId>
     	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	<version>3.1.5</version>
@@ -26,7 +26,7 @@
     	<groupId>org.springframework.data</groupId>
     	<artifactId>spring-data-jpa</artifactId>
     	<version>3.1.5</version>
-	</dependency> -->
+	</dependency>
 
 
 		<dependency>
