--- a/icesipalace-backend/src/main/resources/application.properties
+++ b/icesipalace-backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://35.225.109.97/test
+spring.datasource.username=root
+spring.datasource.password=icesipalace
+spring.jpa.hibernate.ddl-auto=update
