Implemented env variables for database

--- a/icesipalace-backend/src/main/resources/application.properties
+++ b/icesipalace-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://35.225.109.97/test
-spring.datasource.username=root
-spring.datasource.password=icesipalace
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
